# aether-python-library

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test.py
aether/python/: utils.py  validators.py
aether/python/avro/tests/: __init__.py  test_generation.py  test_normalization.py  test_schema.py  test_tools.py
aether/python/entity/: extractor.py
aether/python/entity/tests/: test_extractor.py
aether/python/redis/tests/: test_task.py
aether/python/tests/: __init__.py  test_utils.py  test_validators.py
scripts/: build.sh  install.sh  test.ini  test.sh  travis_release.sh  travis_test.sh
