[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[aliases]
test=pytest

[flake8]
exclude =
    venv,
    ./.eggs/*
    */__pycache__/*
max-line-length = 120
ignore =
        F403,
        F405,
        W504,
        W503

[tool:pytest]
python_files = test*.py
addopts = --maxfail=100 --capture=no
markers = unit

[coverage:run]
branch = true
source = aether
omit = *tests*
concurrency = multiprocessing
parallel = true
disable_warnings = no-data-collected

[coverage:report]
omit = *tests*
show_missing = true
fail_under = 90
